Criando uma pagina animada
Colocando em pratica o que aprendemos com a Gabriela da DIO a criar uma pagina animada e com menu do hamburguer

--- a/index.html
+++ b/index.html
@@ -2,18 +2,48 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/main.css">
-    <title>Hamburgueria Mata Fome</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Documento</title>
 </head>
 <body>
-    <div class="container">
-        <div class="card">
-            <div class="card-wrapper">
-                <h2>Menu</h2>
-                <p> Lanches que vão deixar a sua vida mais feliz!!</p>
+    <header class="header-wrapper">
+        <div class="header">
+            <div class="checkbox-container">
+                <div class="checkbox-wrapper">
+                    <input type="checkbox" id="taggle">
+                    <label class="checkbox" for="taggle">
+                       <div class="trace"></div>
+                       <div class="trace"></div>
+                       <div class="trace"></div>
+                    </label>
+                    <div class="menu"></div>
+                    <nav class="menu-itens">
+                        <ul>
+                            <li>
+                                <a  href="#">Home</a>
+                            </li>
+                            <li>
+                                <a href="#">Sobre</a>
+                            </li>
+                            <li>
+                                <a href="#">Projeto</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
             </div>
         </div>
-    </div>
+        <h1>Silvia Rosa</h1>
+        <h2>Front End Developer</h2>
+        <div class="Social-Media">
+            <a href="#">Linkedin</a>
+            <a href="#">Github</a>
+        </div>
+    </header>
+    <main>
+    </main>
+    <footer>
+    </footer>
 </body>
-</html>
