--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Documento</title>
@@ -12,8 +11,8 @@
         <div class="header">
             <div class="checkbox-container">
                 <div class="checkbox-wrapper">
-                    <input type="checkbox" id="taggle">
-                    <label class="checkbox" for="taggle">
+                    <input type="checkbox" id="toggle">
+                    <label class="checkbox" for="toggle">
                        <div class="trace"></div>
                        <div class="trace"></div>
                        <div class="trace"></div>
@@ -43,7 +42,41 @@
         </div>
     </header>
     <main>
+        <div class="container">
+            <div class="card-text">
+            Eu me chamo Silvia Rosa, eu estou em transição de carreira. Depois de atuar durante 12 anos no mercado de
+            planejamento urbano e durante 6 anos no comércio da família, resolvi buscar realizar mais um sonho que e 
+            estudar e trabalhar na área de desenvolviemnto de sites e aplicativos.
+            </div>
+        </div>
+        <div class="card-a">
+            <div class="card-wrapper">
+                <h2>Github</h2>
+                <p>Veja meus projetos</p>
+            </div>
+        </div>
+
+        <div class="card-container">
+            <div class="card-b">
+                <div class="card-wrapper">
+                    <h2>Linkedin</h2>
+                    <p>Veja mais detalhes sobre minha carreira profissional!</p>
+                </div>
+            </div>
+            <div class="card-text">No Linkedin você vai ver minha história profissional,
+                minhas graduações e meus cursos especialização.
+            </div>
+
+        </div>
+        <div class="card-container">
+            <div class="card-wrapper">
+                <h2>Instagram</h2>
+                <p>Meu dia a dia na minha empresa online</p>
+            </div>
+        </div>
     </main>
-    <footer>
+    <footer class="footer">
+        Feito por Silvia Rosa
     </footer>
 </body>
+</html>
