--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="card-text">
             Eu me chamo Silvia Rosa, eu estou em transição de carreira. Depois de atuar durante 12 anos no mercado de
             planejamento urbano e durante 6 anos no comércio da família, resolvi buscar realizar mais um sonho que e 
-            estudar e trabalhar na área de desenvolviemnto de sites e aplicativos.
+            estudar e trabalhar na área de desenvolvimento front-end.
             </div>
         </div>
         <div class="card-a">
