--- a/index.html
+++ b/index.html
@@ -37,25 +37,29 @@
         <h1>Silvia Rosa</h1>
         <h2>Front End Developer</h2>
         <div class="Social-Media">
-            <a href="#">Linkedin</a>
+            <a href="#">Contato</a>
             <a href="#">Github</a>
         </div>
     </header>
     <main>
         <div class="container">
+            <img class="silvia" src="/silvia.jpeg" alt="silvia">
             <div class="card-text">
             Eu me chamo Silvia Rosa, eu estou em transição de carreira. Depois de atuar durante 12 anos no mercado de
             planejamento urbano e durante 6 anos no comércio da família, resolvi buscar realizar mais um sonho que e 
             estudar e trabalhar na área de desenvolvimento front-end.
             </div>
         </div>
-        <div class="card-a">
-            <div class="card-wrapper">
-                <h2>Github</h2>
-                <p>Veja meus projetos</p>
+        <div class="card-container">
+            <div class="card-a">
+                <div class="card-wrapper">
+                    <h2>Github</h2>
+                    <p>Conheça meu portifólio</p>
+                </div>
+            </div>
+            <div class="card-textogit">No Github você vai conhecer mais sobre meus projetos!</div>
             </div>
         </div>
-
         <div class="card-container">
             <div class="card-b">
                 <div class="card-wrapper">
@@ -63,16 +67,10 @@
                     <p>Veja mais detalhes sobre minha carreira profissional!</p>
                 </div>
             </div>
-            <div class="card-text">No Linkedin você vai ver minha história profissional,
+            <div class="card-textolinkedin">No Linkedin você vai ver minha história profissional,
                 minhas graduações e meus cursos especialização.
             </div>
 
-        </div>
-        <div class="card-container">
-            <div class="card-wrapper">
-                <h2>Instagram</h2>
-                <p>Meu dia a dia na minha empresa online</p>
-            </div>
         </div>
     </main>
     <footer class="footer">
