--- a/index.html
+++ b/index.html
@@ -43,31 +43,36 @@
     </header>
     <main>
         <div class="container">
-            <img class="silvia" src="/silvia.jpeg" alt="silvia">
+            <div class="card">
+                <div class="card-wrapper">
+                    <h2>Silvia Rosa</h2>
+                    <p>Minhas Informações</p>
+                </div>
+            </div>
             <div class="card-text">
-            Eu me chamo Silvia Rosa, eu estou em transição de carreira. Depois de atuar durante 12 anos no mercado de
+                Eu me chamo Silvia Rosa, eu estou em transição de carreira. Depois de atuar durante 12 anos no mercado de
             planejamento urbano e durante 6 anos no comércio da família, resolvi buscar realizar mais um sonho que e 
             estudar e trabalhar na área de desenvolvimento front-end.
-            </div>
+            </div>  
         </div>
         <div class="card-container">
-            <div class="card-a">
+            <div class="card">
                 <div class="card-wrapper">
                     <h2>Github</h2>
                     <p>Conheça meu portifólio</p>
                 </div>
             </div>
-            <div class="card-textogit">No Github você vai conhecer mais sobre meus projetos!</div>
+            <div class="card-text">No Github você vai conhecer mais sobre meus projetos!</div>
             </div>
         </div>
         <div class="card-container">
-            <div class="card-b">
+            <div class="card">
                 <div class="card-wrapper">
                     <h2>Linkedin</h2>
                     <p>Veja mais detalhes sobre minha carreira profissional!</p>
                 </div>
             </div>
-            <div class="card-textolinkedin">No Linkedin você vai ver minha história profissional,
+            <div class="card-text">No Linkedin você vai ver minha história profissional,
                 minhas graduações e meus cursos especialização.
             </div>
 
