Informações nos Botões Iniciais
Link para acessa o Linkedin e o Git

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                                 <a href="#">Sobre</a>
                             </li>
                             <li>
-                                <a href="#">Projeto</a>
+                                <a href="#">Projetos</a>
                             </li>
                         </ul>
                     </nav>
@@ -37,8 +37,8 @@
         <h1>Silvia Rosa</h1>
         <h2>Front End Developer</h2>
         <div class="Social-Media">
-            <a href="#">Contato</a>
-            <a href="#">Github</a>
+            <a href="https://www.linkedin.com/in/silviarosadomingues/">Linkedin</a>
+            <a href="https://github.com/arqsrosa">Github</a>
         </div>
     </header>
     <main>
